-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.1044 2011-05-23 00:08:40 guru Exp $
-----------------------------------------------------------------------------------------

2011-05-22	pwessel
	* *_func.c:		Made sure usage message matches the man pages.

2011-05-21	remko
	* test/grdimage/gdal:	Moved images in here to avoid deleting needle.png on "make spotless"

2011-05-20	jluis
	* gmt_notunix.h:	Remove #define HAVE_SINCOS 1 for Intel compilers because it's extremely slow.

2011-05-20	remko
	* gmt_io.c:		Fixed bug in parsing segment headers (did not allow empty argument after option).
	* gmt_math.h:		No longer include gmt_notposix.h (moved to gmt.h and pslib.c).
	* pslib.c, gmt.h:	For logical reasons, include BOTH gmt_notunix.h, then gmt_notposix.h.
	* gmt_notunix.h:	No longer define SET_IN_NOTUNIX, but simply define _GMT_NOTPOSIX_H.
	* gmt_constants.h:	Introduced constants GMT_BIGENDIAN (0/1), GMT_ENDIAN ('L'/'B').
	* pscoupe_func.c:	Numerous updates to GMT5.

2011-05-19	remko
	* pslib.c, pslib_f77.c:	Split off Fortran bindings
	* pslib.c, gmt_support.c:	Make new *_putusername routines, returning "unknown" on WIN32.
	* gmt_notposix.h:	Properly use #undef HAVE_<func>, instead of #define HAVE_<func> 0
	* *.[ch]:		Changed accordingly (needs #if defined() now)
	* *.sh:			Replaced contour label spec +s and +k by +f
	* *contour_func.c:	---"---
	* gmt_notposix.c:	Gathering of all non-POSIX replacements (from gmt_stat.c)
	* gmt_math.h:		Removed unnecessary GMT_ from GMT_<func> replacements.

2011-05-18	remko
	* *.tex:		Removed .gmt_bb_info; replaced {\it} by \emph{} and {\bf} by \textbf{}.
	* gmt_init.c:		Two routines GMT_parse_[X|Y]_option replaced by single GMT_parse_XY_option.
				-X and -Y option now support modifiers a|c|f|r, treated separately!
	* explain_-XY*.text:	---"---
	* test/psbasemap/origin.sh:	Test new -X and -Y functionality.